<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_tools_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luis@robtech.com">luis</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>  
  <depend>tf_transformations</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
